--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "description": "e-commerce",
   "devDependencies": {
     "nodemon": "^3.1.7"
+  },
+  "dependencies": {
+    "express": "^4.21.0"
   }
 }
